--- a/index.css
+++ b/index.css
@@ -1,8 +1,13 @@
-
+div {
+    width: 720px;
+    margin-left: auto;
+    margin-right: auto;
+}
 body {
     font-family: "Crimson Text", "Times New Roman", serif;
     background-color: #F2FFFC;
     font-size: 20px;
+    line-height: 1.5;
 }
 
 h1, h2 {
@@ -12,6 +17,8 @@ main h1  {
     text-align: center;
     color: #FFF;
     background-color: #851944;
+    padding: 25px;
+    border-bottom: 10px solid black;
 }
 
 p   {
@@ -20,16 +27,23 @@ p   {
 
 blockquote {
     background-color: #D9E5E3;
+    padding: 20px;
+    border: 10px solid #C2CCCA;
+    width: 250;
+    box-sizing: border-box;
 }
 
 aside {
     background-color: #3C1D3D;
     color: #F2FFFC;
+    padding: 20px;
+    text-align: center;
 }
 
 footer {
     background-color: #000;
     color: #F2FFFC;
+    padding: 20px;
 }
 
 nav a {
