--- a/index.css
+++ b/index.css
@@ -1,58 +1,81 @@
-div {
-    width: 720px;
-    margin-left: auto;
-    margin-right: auto;
-}
 body {
-    font-family: "Crimson Text", "Times New Roman", serif;
-    background-color: #F2FFFC;
-    font-size: 20px;
-    line-height: 1.5;
+	font-family: "Crimson Text", "Times New Roman", serif;
+	background-color: #F2FFFC;
+	font-size: 120%;
+	line-height: 1.5;
 }
 
 h1, h2 {
-    font-family: "Open Sans Condensed", "Arial", sans-serif;
-}
-main h1  {
-    text-align: center;
-    color: #FFF;
-    background-color: #851944;
-    padding: 25px;
-    border-bottom: 10px solid black;
+	font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
-p   {
-    text-align: justify;
+main h1 {
+    font-size: 60px;
+	text-align: center;
+	background-color: #851944;
+	color: #FFF;
+	padding: 25px;
+	border-bottom: 10px solid black;
+}
+
+p {
+	text-align: justify;
+    border: 20px;
 }
 
 blockquote {
-    background-color: #D9E5E3;
-    padding: 20px;
-    border: 10px solid #C2CCCA;
-    width: 250;
-    box-sizing: border-box;
+	background-color: #D9E5E3;
+	border: 10px solid #C2CCCA;
+	width: 250px;
+	box-sizing: border-box;
+    border: 20px 40px; /* primeiro valor e a altura e o segundo comprimento*/
 }
-
 aside {
-    background-color: #3C1D3D;
-    color: #F2FFFC;
-    padding: 20px;
-    text-align: center;
+	background-color: #3C1D3D;
+	color: #F2FFFC;
 }
 
 footer {
-    background-color: #000;
-    color: #F2FFFC;
-    padding: 20px;
+	background-color: #000;
+	color: #F2FFFC;
 }
 
 nav a {
-    color: #F2FFFC;
+	color: #F2FFFC;
 }
+
 main a {
-    color: #851944;
+	color: #851944;
 }
-aside a  {
-    color: inherit;
-    font-family: "Open Sans Condensed", sans-serif;
+
+aside a {
+	color: inherit;
+	font-family: "Open Sans Condensed", sans-serif;
+}
+aside h1 {
+    font-size: 30px;
+    border-bottom: 25px;
+}
+
+blockquote, aside, footer {
+    padding: 20px;
+}
+
+main div {
+	width: 720px;
+    padding: 30px 0;
+	margin: auto;
+}
+
+aside {
+	text-align: center;
+}
+strong{
+    font-weight: bold;
+}
+em {
+    font-style: italic;
+}
+h2 {
+    font-size: 30px;
 }
