--- a/index.css
+++ b/index.css
@@ -9,38 +9,36 @@ h1, h2 {
 	font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
-main h1 {
-    font-size: 60px;
+.titulo-principal {
 	text-align: center;
 	background-color: #851944;
 	color: #FFF;
 	padding: 25px;
 	border-bottom: 10px solid black;
+	font-size: 60px;
 }
 
 p {
 	text-align: justify;
-    border: 20px;
+	margin: 20px 0;
 }
 
-blockquote {
+.citacao-bio {
 	background-color: #D9E5E3;
 	border: 10px solid #C2CCCA;
 	width: 250px;
 	box-sizing: border-box;
-    border: 20px 40px; /* primeiro valor e a altura e o segundo comprimento*/
+	margin: 20px 40px;
 }
-aside {
+
+.navegacao-site {
+	text-align: center;
 	background-color: #3C1D3D;
 	color: #F2FFFC;
 }
 
-footer {
+.rodape-pagina {
 	background-color: #000;
-	color: #F2FFFC;
-}
-
-nav a {
 	color: #F2FFFC;
 }
 
@@ -48,37 +46,53 @@ main a {
 	color: #851944;
 }
 
-aside a {
+.navegacao-site a {
 	color: inherit;
 	font-family: "Open Sans Condensed", sans-serif;
 }
-aside h1 {
-    font-size: 30px;
-    border-bottom: 25px;
-}
 
-blockquote, aside, footer {
+.citacao-bio, .navegacao-site, .rodape-pagina {
     padding: 20px;
 }
 
-main div {
+.container {
 	width: 720px;
-    padding: 30px 0;
 	margin: auto;
+	padding: 30px 0;
 }
 
-aside {
-	text-align: center;
+.navegacao-site h1 {
+	font-size: 30px;
+	margin-bottom: 25px;
 }
-strong{
-    font-weight: bold;
+
+strong {
+	font-weight: bold;
 }
+
 em {
-    font-style: italic;
+	font-style: italic;
 }
-h2 {
-    font-size: 30px;
+
+.subtitulo-texto {
+	font-size: 30px;
 }
-aside li {
-    display: inline-block;
+
+.icones-redes-sociais li {
+	display: inline-block;
+}
+
+.artigo {
+	padding-bottom: 30px;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 20px;
+}
+
+.leia-mais {
+	padding: 8px;
+	margin: 16px;
+	display: block;
+	font-size: 24px;
+	text-align: center;
+	background-color: #E6E7E8;
 }
