--- a/index.css
+++ b/index.css
@@ -17,7 +17,9 @@ h1, h2 {
 	border-bottom: 10px solid black;
 	font-size: 60px;
 }
-
+h1{
+	text-transform: uppercase;
+}
 p {
 	text-align: justify;
 	margin: 20px 0;
@@ -95,4 +97,22 @@ em {
 	font-size: 24px;
 	text-align: center;
 	background-color: #E6E7E8;
+}
+nav a{
+	text-transform: lowercase;
+}
+.github{
+	background-image: url(github.png);
+}
+.twitter{
+	background-image: url(twitter.png);
+}
+.linkedin{
+	background-image: url(linkedin.png);
+}
+.icones-redes-sociais a{
+	width: 40px;
+	height: 40px;
+	display: inline-block;
+	text-indent: -9999px;
 }
