--- a/index.css
+++ b/index.css
@@ -16,10 +16,9 @@ h1, h2 {
 	padding: 25px;
 	border-bottom: 10px solid black;
 	font-size: 60px;
-}
-h1{
 	text-transform: uppercase;
 }
+
 p {
 	text-align: justify;
 	margin: 20px 0;
@@ -57,7 +56,7 @@ main a {
     padding: 20px;
 }
 
-.container {
+.texto {
 	width: 720px;
 	margin: auto;
 	padding: 30px 0;
@@ -78,6 +77,7 @@ em {
 
 .subtitulo-texto {
 	font-size: 30px;
+	clear: both
 }
 
 .icones-redes-sociais li {
@@ -98,21 +98,52 @@ em {
 	text-align: center;
 	background-color: #E6E7E8;
 }
-nav a{
+
+nav a {
 	text-transform: lowercase;
 }
-.github{
-	background-image: url(github.png);
-}
-.twitter{
-	background-image: url(twitter.png);
-}
-.linkedin{
-	background-image: url(linkedin.png);
-}
-.icones-redes-sociais a{
+
+.icones-redes-sociais a {
 	width: 40px;
 	height: 40px;
-	display: inline-block;
-	text-indent: -9999px;
+	display: block;
+	text-indent: -99999px;
+}
+
+.github {
+	background-image: url(github.png);
+}
+
+.twitter {
+	background-image: url(twitter.png);
+}
+
+.linkedin {
+	background-image: url(linkedin.png);
+}
+.direita{
+	float: right;
+}
+.esquerda{
+	float: left;
+}
+cite {
+    font-style: italic;
+    float: right;
+    display: block;
+}
+main {
+    float: left;
+	width: 85%;
+}
+
+.minha-foto, .navegacao-site {
+    float: right;
+    width: 15%;
+    box-sizing: border-box;
+    border-left: 10px solid black;
+    border-bottom: 10px solid black;
+}
+.rodape-pagina {
+    clear: both;
 }
