--- a/css/index.css
+++ b/css/index.css
@@ -24,14 +24,6 @@ p {
 	margin: 20px 0;
 }
 
-.citacao-bio {
-	background-color: #D9E5E3;
-	border: 10px solid #C2CCCA;
-	width: 250px;
-	box-sizing: border-box;
-	margin: 20px 40px;
-}
-
 .navegacao-site {
 	text-align: center;
 	background-color: #3C1D3D;
@@ -84,21 +76,6 @@ em {
 	display: inline-block;
 }
 
-.artigo {
-	padding-bottom: 30px;
-	border-bottom: 1px solid #ccc;
-	margin-bottom: 20px;
-}
-
-.leia-mais {
-	padding: 8px;
-	margin: 16px;
-	display: block;
-	font-size: 24px;
-	text-align: center;
-	background-color: #E6E7E8;
-}
-
 nav a {
 	text-transform: lowercase;
 }
@@ -111,27 +88,17 @@ nav a {
 }
 
 .github {
-	background-image: url(github.png);
+	background-image: url(../img/github.png);
 }
 
 .twitter {
-	background-image: url(twitter.png);
+	background-image: url(../img/twitter.png);
 }
 
 .linkedin {
-	background-image: url(linkedin.png);
+	background-image: url(../img/linkedin.png);
 }
-.direita{
-	float: right;
-}
-.esquerda{
-	float: left;
-}
-cite {
-    font-style: italic;
-    float: right;
-    display: block;
-}
+
 main {
     float: left;
 	width: 85%;
