--- a/avancando-html-css/css/index.css
+++ b/avancando-html-css/css/index.css
@@ -45,11 +45,15 @@
     font-size: 3em;
     text-transform: uppercase;
     margin-bottom: .5em;
+    text-shadow: 2px 2px #000;
 }
 .trabalhos {
     background-color: #3C1D3D;
     border-top: .5em solid #000;
     border-bottom: .5em solid #000;
+    background-image: linear-gradient(135deg, transparent, transparent 14px, rgba(0,0,0,.1) 14px, rgba(0,0,0,.1) 15px, transparent 15px, transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
 }
 .trabalhos h2 {
     color: #FFF;
@@ -69,6 +73,9 @@
 .blog {
     background-color: #999;
     position: relative;
+    background-image: linear-gradient(45deg, transparent, transparent 14px, rgba(255,255,255,.1) 14px, rgba(255,255,255,.1) 15px, transparent 15px, transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
     color: #FFF;
     border-bottom: .5em solid #851944;
 }
@@ -123,83 +130,82 @@ body {
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     font-size: 400%;
-    color: #D5447E;
+    color: rgba(255, 127, 127, .5);
     position: absolute;
 }
 .eficiencia {
     top: 50%;
     left: 60%;
-    transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg) scale(.25);
-    opacity: .3;
+    -webkit-transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg) scale(.25);
 }
-
 .boas-praticas {
     top: 70%;
     left: 20%;
-    transform: translate(-50%, -50%) translateZ(1px) rotate(10deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(1px) rotate(10deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(1px) rotate(10deg) scale(.25);
     opacity: .3;
 }
-
 .codigo-limpo {
     top: 45%;
     left: 25%;
-    transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(.25);
     opacity: .6;
 }
-
 .css3 {
     top: 55%;
     left: 35%;
-    transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(.25);
     opacity: .6;
 }
-
 .html5 {
     top: 30%;
     left: 65%;
-    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
     opacity: .6;
 }
-
 .javascript {
     top: 15%;
     left: 60%;
-    transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(.25);
-    opacity: .3;
+    -webkit-transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(.25);
 }
-
 .acessibilidade {
     top: 30%;
     left: 35%;
-    transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(.25);
     opacity: .8;
 }
-
 .responsivo {
     top: 40%;
     left: 40%;
-    transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(.25);
     opacity: .8;
 }
-
 .otimizacoes {
     top: 70%;
     left: 65%;
-    transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(.25);
     opacity: .6;
 }
-
 .agilidade {
     top: 75%;
     left: 35%;
-    transform: translate(-50%, -50%) translateZ(1px) rotate(5deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(1px) rotate(5deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(1px) rotate(5deg) scale(.25);
     opacity: .3;
 }
-
 .design {
     top: 40%;
     left: 60%;
-    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+    -webkit-transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+            transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
     opacity: .6;
 }
 .titulo-principal {
