--- a/avancando-html-css/css/site.css
+++ b/avancando-html-css/css/site.css
@@ -14,6 +14,7 @@ h2,
 h1 {
     text-transform: uppercase;
     font-size: 3em;
+    text-shadow: 3px 3px #000;
 }
 
 .titulo-principal {
@@ -57,7 +58,6 @@ main p {
 }
 
 .rodape-pagina {
-    background-color: rgba(0, 0, 0, 0.5);
     color: #F2FFFC;
     padding: 1em;
     clear: both;
@@ -66,6 +66,15 @@ main p {
     left: 0;
     width: 100%;
     box-sizing: border-box;
+    background-repeat: no-repeat;
+    text-shadow: 1px 1px black;
+    background-image: radial-gradient(ellipse at left bottom,
+        rgba(60, 29, 61, 0.8),
+        rgba(60, 29, 61, 0.8) 65%,
+        black 65%,
+        black 70%,
+        transparent 70%);
+    background-size: 25% 100%;
 }
 
 .container {
