--- a/avancando-html-css/css/site.css
+++ b/avancando-html-css/css/site.css
@@ -34,6 +34,10 @@ main a {
     color: #851944;
 }
 
+main a:nth-last-of-type(n){
+    color: red;
+}
+
 main p {
     text-align: justify;
     margin: 1em 0;
@@ -140,4 +144,14 @@ main {
     top: 0;
     right: 0;
     height: 300px;
+}
+main a:hover,
+main a:focus,
+footer a:hover,
+footer a:focus {
+    color: red;
+}
+.navegacao-site a:hover,
+.navegacao-site a:focus {
+    text-shadow: 0 0 2px pink;
 }
