--- a/avancando-html-css/css/blog.css
+++ b/avancando-html-css/css/blog.css
@@ -1,11 +1,3 @@
-.post-blog {
-    padding-bottom: 1.5em;
-    margin-bottom: 1em;
-    background-image: linear-gradient(to right, rgba(200, 200, 200, 0), rgba(200, 200, 200, 1), rgba(200, 200, 200, 0));
-    background-size: 100% 1px;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-}
 .leia-mais {
     padding: .5em;
     margin: 1em;
@@ -13,4 +5,13 @@
     font-size: 1.5em;
     text-align: center;
     background-color: #E6E7E8;
+}
+
+.post-blog + .post-blog {
+    padding-top: 1em;
+    margin-top: 1.5em;
+    background-image: linear-gradient(to right, rgba(200, 200, 200, 0), rgba(200, 200, 200, 1), rgba(200, 200, 200, 0));
+    background-size: 100% 1px;
+    background-repeat: no-repeat;
+    background-position: top center;
 }
