--- a/avancando-html-css/css/index.css
+++ b/avancando-html-css/css/index.css
@@ -38,14 +38,6 @@
     display: block;
     text-align: center;
 }
-.trabalhos {
-    background-color: #3C1D3D;
-    border-top: .5em solid #000;
-    border-bottom: .5em solid #000;
-    background-image: linear-gradient(135deg, transparent, transparent 14px, rgba(0,0,0,.1) 14px, rgba(0,0,0,.1) 15px, transparent 15px, transparent);
-    background-size: 20px 20px;
-    background-attachment: fixed;
-}
 .secao-inicio {
     padding: 2em;
 }
@@ -54,6 +46,14 @@
     text-transform: uppercase;
     margin-bottom: .5em;
     text-shadow: 2px 2px #000;
+}
+.trabalhos {
+    background-color: #3C1D3D;
+    border-top: .5em solid #000;
+    border-bottom: .5em solid #000;
+    background-image: linear-gradient(135deg, transparent, transparent 14px, rgba(0,0,0,.1) 14px, rgba(0,0,0,.1) 15px, transparent 15px, transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
 }
 .trabalhos h2 {
     color: #FFF;
@@ -251,12 +251,7 @@ body {
     background-color: #F2FFFC;
     color: #000;
     padding: 1.5em;
-}
-.blog .mais-recente {
-    background-color: #F2FFFC;
-}
-.blog .mais-recente a {
-    color: #F26;
+    display: none;
 }
 .blog a:hover + .inicio-post,
 .blog a:focus + .inicio-post {
